--- a/docu/docs/module-1/chapter-1-introduction-to-ros2.mdx
+++ b/docu/docs/module-1/chapter-1-introduction-to-ros2.mdx
@@ -15,11 +15,14 @@ learning_objectives:
 assessment_type: Quiz
 difficulty_level: Beginner
 capstone_component: false
-slug: /m1-the-robotic-nervous-system-ros-2-weeks-3-5/introduction-to-ros2
+slug: /module-1/introduction-to-ros2
 ---
 
-import { Tabs, TabItem } from '@docusaurus/theme-common';
-import { Callout, Exercise, KeyTakeaways } from '@site/src/components/mdx-components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import Callout from '@site/src/components/mdx-components/Callout';
+import Exercise from '@site/src/components/mdx-components/Exercise';
+import KeyTakeaways from '@site/src/components/mdx-components/KeyTakeaways';
 
 # Introduction to ROS 2
 
