--- a/docu/docs/module-2/chapter-1-introduction-to-digital-twins.mdx
+++ b/docu/docs/module-2/chapter-1-introduction-to-digital-twins.mdx
@@ -15,11 +15,14 @@ learning_objectives:
 assessment_type: Quiz
 difficulty_level: Beginner
 capstone_component: false
-slug: /m2-the-digital-twin-gazebo-unity-weeks-6-7/introduction-to-digital-twins
+slug: /module-2/introduction-to-digital-twins
 ---
 
-import { Tabs, TabItem } from '@docusaurus/theme-common';
-import { Callout, Exercise, KeyTakeaways } from '@site/src/components/mdx-components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import Callout from '@site/src/components/mdx-components/Callout';
+import Exercise from '@site/src/components/mdx-components/Exercise';
+import KeyTakeaways from '@site/src/components/mdx-components/KeyTakeaways';
 
 # Introduction to Digital Twins and Simulation
 
