--- a/docu/docs/module-3/chapter-1-introduction-to-nvidia-isaac.mdx
+++ b/docu/docs/module-3/chapter-1-introduction-to-nvidia-isaac.mdx
@@ -15,11 +15,14 @@ learning_objectives:
 assessment_type: Quiz
 difficulty_level: Intermediate
 capstone_component: false
-slug: /m3-the-ai-robot-brain-nvidia-isaac-weeks-8-10/introduction-to-nvidia-isaac
+slug: /module-3/introduction-to-nvidia-isaac
 ---
 
-import { Tabs, TabItem } from '@docusaurus/theme-common';
-import { Callout, Exercise, KeyTakeaways } from '@site/src/components/mdx-components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import Callout from '@site/src/components/mdx-components/Callout';
+import Exercise from '@site/src/components/mdx-components/Exercise';
+import KeyTakeaways from '@site/src/components/mdx-components/KeyTakeaways';
 
 # Introduction to NVIDIA Isaac for AI Robotics
 
