--- a/docu/docs/module-4/chapter-1-introduction-to-vla.mdx
+++ b/docu/docs/module-4/chapter-1-introduction-to-vla.mdx
@@ -15,11 +15,14 @@ learning_objectives:
 assessment_type: Quiz
 difficulty_level: Advanced
 capstone_component: true
-slug: /m4-vision-language-action-weeks-11-13/introduction-to-vla
+slug: /module-4/introduction-to-vla
 ---
 
-import { Tabs, TabItem } from '@docusaurus/theme-common';
-import { Callout, Exercise, KeyTakeaways } from '@site/src/components/mdx-components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import Callout from '@site/src/components/mdx-components/Callout';
+import Exercise from '@site/src/components/mdx-components/Exercise';
+import KeyTakeaways from '@site/src/components/mdx-components/KeyTakeaways';
 
 # Introduction to Vision-Language-Action (VLA)
 
