--- a/docs/module-1/chapter-1-introduction-to-ros2.mdx
+++ b/docs/module-1/chapter-1-introduction-to-ros2.mdx
@@ -3,10 +3,10 @@ id: m1c1
 title: Introduction to ROS 2
 description: An introduction to the Robot Operating System 2.
 tags: ['ROS 2', 'robotics', 'middleware']
-sidebar_label: Introduction to ROS 2
+sidebar_label: Chapter 1 Introduction to ROS 2
 estimated_time: 1 hour
 week: 3
-module: Module 1
+module: Module 1 (ROS 2) (Weeks 3–5)
 prerequisites: []
 learning_objectives:
   - Understand the core concepts of ROS 2.
