--- a/docs/module-2/chapter-1-introduction-to-digital-twins.mdx
+++ b/docs/module-2/chapter-1-introduction-to-digital-twins.mdx
@@ -3,10 +3,10 @@ id: m2c1
 title: Introduction to Digital Twins and Simulation
 description: An introduction to digital twin concepts and their application in robotics simulation.
 tags: ['digital twin', 'simulation', 'Gazebo', 'Unity']
-sidebar_label: Digital Twins Introduction
+sidebar_label: Chapter 1 Digital Twins Introduction
 estimated_time: 1 hour
 week: 6
-module: Module 2
+module: Module 2 (Gazebo & Unity) (Weeks 6–7)
 prerequisites: ['m1c1']
 learning_objectives:
   - Define what a digital twin is and its significance in robotics.
