--- a/docs/module-3/chapter-1-introduction-to-nvidia-isaac.mdx
+++ b/docs/module-3/chapter-1-introduction-to-nvidia-isaac.mdx
@@ -3,10 +3,10 @@ id: m3c1
 title: Introduction to NVIDIA Isaac for AI Robotics
 description: An introduction to the NVIDIA Isaac platform for developing AI-powered robots.
 tags: ['NVIDIA Isaac', 'AI robotics', 'simulation', 'robot brain']
-sidebar_label: Isaac Platform Introduction
+sidebar_label: Chapter 1 Isaac Platform Introduction
 estimated_time: 1 hour
 week: 8
-module: Module 3
+module: Module 3 (NVIDIA Isaac™) (Weeks 8–10)
 prerequisites: ['m1c1', 'm2c1']
 learning_objectives:
   - Understand the capabilities of the NVIDIA Isaac platform.
