--- a/docs/module-4/chapter-1-introduction-to-vla.mdx
+++ b/docs/module-4/chapter-1-introduction-to-vla.mdx
@@ -3,10 +3,10 @@ id: m4c1
 title: Introduction to Vision-Language-Action (VLA)
 description: An introduction to the Vision-Language-Action paradigm in robotics and AI.
 tags: ['VLA', 'vision', 'language', 'action', 'robotics', 'AI']
-sidebar_label: VLA Introduction
+sidebar_label: Chapter 1 VLA Introduction
 estimated_time: 1 hour
 week: 11
-module: Module 4
+module: Module 4 (VLA) (Weeks 11–13)
 prerequisites: ['m1c1', 'm2c1', 'm3c1']
 learning_objectives:
   - Understand the concept of Vision-Language-Action in robotics.
