--- a/docs/module-1/chapter-2.mdx
+++ b/docs/module-1/chapter-2.mdx
@@ -33,7 +33,7 @@ import KeyTakeaways from '@site/src/components/mdx-components/KeyTakeaways';
 - Explore services and actions.
 </Callout>
 
-**Prerequisites:** [Chapter 1: Introduction to ROS 2](./chapter-1)
+**Prerequisites:** [Chapter 1: Introduction to ROS 2](/docs/module-1/introduction-to-ros2)
 
 ## Introduction
 
